2009-11-01  Michael Rash  <mbr@cipherdyne.org>
	* (Legacy code) Applied patch from Jonthan Bennett to support the usage of
	  the http_proxy environmental variable for sending SPA packets through an
	  HTTP proxy.  The patch also adds support for specifying an HTTP proxy
	  user and password via the following syntax:
	     'http://username:password@proxy.com:port' or
	     'http://username:password@proxy.com'
	* (Legacy code) Bug fix to allow the --rand-port argument to function along
	  without an inappropriate check for the --Server-port arg.

2009-10-27  Michael Rash  <mbr@cipherdyne.org>
	* Added --http-proxy argument to the fwknop C client so that SPA packets
	  can be sent through HTTP proxies.
	* (Legacy code) Changed HTTP proxy handling to point an SPA packet to
	  an HTTP proxy with -D specifying the end point host and --HTTP-proxy
	  pointing to the proxy host.  This fix was suggested by Jonathan Bennett.

2009-08-02  Damien Stuart <dstuart@dstuart.org>
	* Tweaks to digest code - added SHA384 and SHA512 to supported digests.
	* Updated autoconf files to account or new headers and types recently added.
	* Bumped libfko version to 0.63 and perl FKO module version to 0.23.

2009-07-26  Michael Rash  <mbr@cipherdyne.org>
	* Implemented -s command line argument on the fwknop client command line
	  so that the IP "0.0.0.0" can be sent within an SPA packet.  The fwknopd
	  server can wrap access requirements around this IP.
	* Initial public release of fwknop-c-0.62.

2009-07-23  Michael Rash  <mbr@cipherdyne.org>
	* Added the --show-last and --no-save command line options to show the
	  command line used for the previous fwknop invocation, and to have the
	  fwknop client not save its command line arguments.
	* Bug fix to force libfko to recalculate the random data embedded in the
	  the SPA packet after a random port is acquired via --rand-port or
	  --nat-rand-port.  This is a precaution so that an attacker cannot guess